src/gallium/drivers/radeonsi/si_shader_tgsi_alu.c
@@ -60,7 +60,8 @@ static void kil_emit(const struct lp_build_tgsi_action *action,
 
 		for (i = 0; i < TGSI_NUM_CHANNELS; i++) {
 			LLVMValueRef value = lp_build_emit_fetch(bld_base, inst, 0, i);
-			conds[i] = LLVMBuildFCmp(builder, LLVMRealOGE, value,
+			/* UGE because NaN shouldn't get killed */
+			conds[i] = LLVMBuildFCmp(builder, LLVMRealUGE, value,
 						ctx->ac.f32_0, "");
 		}
 
